@@ -53,7 +53,8 @@ class TextBuffer
 		void scroll2Line(GtkTextView *view,int linenum,bool doupdate=false);
 		void scroll2Mark(GtkTextView *view,GtkTextMark *mark);
 		void scroll2Iter(GtkTextView *view,GtkTextIter iter);
-
+		void scroll2OnScreen(GtkTextView *view,bool doupdate);
+		void scroll2CentreScreen(GtkTextView *view,bool doupdate);
 	private:
 };
 
